--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -17,11 +17,30 @@
 }
 
 body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+  background-color: #ffff;
+
+}
+main{
+ display: flex;
+ flex-direction: column;
+ /* align-items: center; */
+ width: 1440px;
+
+}
+.nav-bar{
+  display: flex;
+  justify-content: space-between;
+}
+.nav-bar-right-seperated-left{
+  display: flex;
+}
+.nav-bar-right-seperated-right{
+  display: flex;
+}
+.nav-bar-right{
+  display: flex;
+}
+#download-cv-button{
+  width: 136px;
+  height: 36px;
 }
