--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -18,9 +18,14 @@
 
 body {
   background-color: #ffff;
+  position: relative;
 
 }
 main{
+  position: absolute;
+  left: 50%;
+  right: 50%;
+  transform: translate(-50%);
  display: flex;
  flex-direction: column;
  /* align-items: center; */
@@ -30,17 +35,94 @@ main{
 .nav-bar{
   display: flex;
   justify-content: space-between;
+  padding:  16px 80px 16px 80px;
+  width: 1280px;
 }
 .nav-bar-right-seperated-left{
   display: flex;
+  gap: 24px;
 }
 .nav-bar-right-seperated-right{
   display: flex;
+  gap: 16px;
+}
+.nav-bar-right-seperated-right img{
+     width: 36px;
+     height: 36px;
 }
 .nav-bar-right{
   display: flex;
+  gap: 24px;
 }
 #download-cv-button{
   width: 136px;
   height: 36px;
 }
+.nav-bar-right-seperated-left span{
+  width: 0;
+  height: 24px;
+  border: 1px solid #F3F4F6;
+}
+#download-cv-button{
+  background-color: #111827;
+  color: #F9FAFB;
+  width: 136px;
+  height: 36px;
+  font-size: 16px;
+  font-weight: 500;
+  padding: 6px 16px 6px 16px;
+  text-align: center;
+  border-radius: 12px  ;
+}
+.general-intro{
+  display: flex;
+  justify-content: center;
+  gap: 48px;
+  width: 1280px;
+  padding: 0px 32px 0px 32px;
+  margin: 0;
+}
+.intro{
+  display: flex;
+  flex-direction: column;
+  width: 768px;
+  gap: 48px;
+}
+.intro p{
+  width: 100%;
+}
+.intro h1{
+  font-size: 60px ;
+  font-weight: 700;
+  line-height: 72px;
+  width: fit-content;
+  height: 72px;
+}
+.condition{
+  display: flex;
+  flex-direction: column;
+  gap: 8px;
+}
+.location{
+  display: flex;
+  width: fit-content;
+  align-items: center;
+  gap: 16px;
+}
+.job-status{
+  display: flex;
+  width: fit-content;
+  align-items: center;
+  gap: 16px;
+
+}
+.job-status img{
+  width: 8px;
+  height: 8px;
+}
+#links{
+  width: 136px;
+  height: 36px;
+}
+
+
