--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -21,50 +21,51 @@ body {
   position: relative;
 
 }
+
 main{
-  position: absolute;
+  /* position: absolute;
   left: 50%;
   right: 50%;
-  transform: translate(-50%);
- display: flex;
- flex-direction: column;
+  transform: translate(-50%); */
+ /* display: flex;
+ flex-direction: column; */
  /* align-items: center; */
- width: 1440px;
+ /* width: 1440px; */
 
 }
 .nav-bar{
-  display: flex;
+  /* display: flex;
   justify-content: space-between;
-  padding:  16px 80px 16px 80px;
-  width: 1280px;
+  padding :  16px 80px 16px 80px;
+  width: 1280px;  */
 }
 .nav-bar-right-seperated-left{
-  display: flex;
-  gap: 24px;
+  /* display: flex;
+  gap: 24px; */
 }
 .nav-bar-right-seperated-right{
-  display: flex;
-  gap: 16px;
+  /* display: flex;
+  gap: 16px; */
 }
 .nav-bar-right-seperated-right img{
-     width: 36px;
-     height: 36px;
+     /* width: 36px;
+     height: 36px; */
 }
 .nav-bar-right{
-  display: flex;
-  gap: 24px;
+  /* display: flex;
+  gap: 24px; */
 }
 #download-cv-button{
-  width: 136px;
-  height: 36px;
+  /* width: 136px;
+  height: 36px; */
 }
 .nav-bar-right-seperated-left span{
-  width: 0;
+  /* width: 0;
   height: 24px;
-  border: 1px solid #F3F4F6;
+  border: 1px solid #F3F4F6; */
 }
 #download-cv-button{
-  background-color: #111827;
+  /* background-color: #111827;
   color: #F9FAFB;
   width: 136px;
   height: 36px;
@@ -72,13 +73,11 @@ main{
   font-weight: 500;
   padding: 6px 16px 6px 16px;
   text-align: center;
-  border-radius: 12px  ;
+  border-radius: 12px  ; */
 }
-.general-intro{
+/* .general-intro{
   display: flex;
   justify-content: center;
-  gap: 48px;
-  width: 1280px;
   padding: 0px 32px 0px 32px;
   margin: 0;
 }
@@ -87,21 +86,12 @@ main{
   flex-direction: column;
   width: 768px;
   gap: 48px;
-}
-.intro p{
-  width: 100%;
-}
-.intro h1{
-  font-size: 60px ;
-  font-weight: 700;
-  line-height: 72px;
-  width: fit-content;
-  height: 72px;
-}
+} */
+
 .condition{
-  display: flex;
+  /* display: flex;
   flex-direction: column;
-  gap: 8px;
+  gap: 8px; */
 }
 .location{
   display: flex;
